# m5cores3-application

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  sdkconfig
components/aw9523b/: CMakeLists.txt  README.md  aw9523b.c  aw9523b_espidf.c
components/axp2101/: CMakeLists.txt  README.md  axp2101.c  axp2101_espidf.c
components/ft6x36/: README.md  ft6x36.c
components/igpio/: igpio_espidf.c
components/ii2c/: ii2c_espidf.c
components/ili9342/: ili9342.c
main/: CMakeLists.txt  bmf_reader.c  bmf_reader.h  cores3_board.c  cores3_board.h  cores3_board_constants.h  cores3_io_extender.c  cores3_power_mgmt.c  cores3_power_mgmt.h  cores3_touch.c  main.c  open_sans_7.h  open_sans_light_16.h  open_sans_light_24.h  open_sans_light_32.h  open_sans_regular_16_4bpp.h  open_sans_regular_24.h  open_sans_regular_32_1bpp.h  power_mgmt.c  power_mgmt.h
main/cores3/: app.c  app.h  cores3_io_extender.c  cores3_power_mgmt.c  cores3_power_mgmt.h  gui_app.c  gui_app.h
main/cores3/display/: cores3_display.c
main/cores3/graphics/: bitmap_icon.c  display_surface.c  display_surface.h  render_support.c  text_renderer.c
main/cores3/graphics/fonts/: open_sans_regular_32_4bpp.h
main/cores3/graphics/icons/: icon_battery_4bpp.h  icon_battery_charging_4bpp.h
main/display/: cores3_display.c  cores3_display.h
main/graphics/: bitmap_icon.c  bitmap_icon.h  display_surface.c  display_surface.h  render_support.c  render_support.h  text_renderer.c  text_renderer.h
main/graphics/icons/: icon_reboot_4bpp.h  icon_wifi_connected_4bpp.h  icon_wifi_disconnected_4bpp.h  wifi_16_mask_1bpp.h
(+9 files in other folders)
