idf_component_register(
	SRCS
		"main.c"
		"cores3_io_extender.c"
		"display/cores3_display.c"
		"graphics/bmf_reader.c"
		"graphics/display_surface.c"
		"graphics/text_renderer.c"
		"cores3_power_mgmt.c"
		"cores3_touch.c"
  INCLUDE_DIRS "."
	REQUIRES
	ii2c
	axp2101
	aw9523b
	ft6x36
	ispi
	igpio
	ili9342
	esp_timer
	esp_driver_gpio
)
