idf_component_register(
	SRCS
		"main.c"
		"cores3/app.c"
		"cores3/gui_app.c"
		"cores3/cores3_io_extender.c"
		"cores3/display/cores3_display.c"
		"cores3/graphics/bmf_reader.c"
		"cores3/graphics/bitmap_icon.c"
		"cores3/graphics/display_surface.c"
		"cores3/graphics/render_support.c"
		"cores3/graphics/text_renderer.c"
		"cores3/cores3_power_mgmt.c"
		"cores3/cores3_touch.c"
		"cores3/cores3_board.c"
	INCLUDE_DIRS
		"."
		"cores3"
	REQUIRES
	ii2c
	axp2101
	aw9523b
	ft6x36
	ispi
	igpio
	ili9342
	esp_timer
	esp_driver_gpio
)
